# agents-memory

./: .env.example  README.md  pyproject.toml  requirements.txt
api/: __init__.py  dependencies.py  main.py
api/middleware/: __init__.py
api/routes/: __init__.py  analytics.py  graph.py  memory.py  pages.py  rag.py
api/schemas/: __init__.py  common.py  graph.py  memory.py  rag.py
config/: __init__.py  logging.py  settings.py
core/: __init__.py
core/embedding/: __init__.py  base.py  dashscope.py  local.py  provider.py  tfidf.py
core/memory/: __init__.py  base.py  episodic.py  manager.py  perceptual.py  semantic.py  working.py
core/rag/: __init__.py  document.py  pipeline.py
core/storage/: __init__.py  base.py  neo4j.py  qdrant.py
doc/: DashScope_llm_use_sample.txt  phase_0_detail.md  phase_1_detail.md  phase_2_detail.md  phase_3_detail.md  phase_4_detail.md  prompts.txt  total_project.md  第八章 记忆与检索.md
legacy_types/: __init__.py  semantic.py
memory_data/: memory.db
scripts/: verify_all.py  verify_config.py  verify_embedding.py  verify_logging.py  verify_memory.py  verify_phase1.py  verify_phase2.py  verify_phase3.py  verify_phase4.py  verify_rag.py  verify_storage.py  verify_utils.py
services/: __init__.py  analytics_service.py  graph_service.py  memory_service.py  rag_service.py
storage/: qdrant_store.py
utils/: __init__.py  helpers.py
web/static/css/: custom.css
web/static/js/: api.js  utils.js
web/templates/: base.html
web/templates/components/: header.html  sidebar.html
web/templates/pages/: dashboard.html  settings.html
(+6 files in other folders)
